Added admin/SuperUser related routes
